// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./PaperViewToggle.stories Default 1`] = `
<div
  class="MuiBox-root css-qxh7fn"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-shqplw-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiStack-root css-1sazv7p-MuiStack-root"
    >
      <div
        class="MuiStack-root css-10cgqx5-MuiStack-root"
      >
        <div
          aria-label="text alignment"
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-cinseo-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="0"
          >
            <div
              class="MuiBox-root css-mro3c9"
            >
              Tokens
            </div>
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="1"
          >
            <div
              class="MuiBox-root css-mro3c9"
            >
              NFTs
            </div>
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root css-gajhq5"
      >
        <ul
          class="MuiList-root MuiList-padding MuiList-dense css-b7dj7n-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-qyw6ft-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-17vdyq3-MuiTypography-root"
              >
                ETH
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-5eu839-MuiTypography-root"
              >
                1.5 ETH ($4,500)
              </p>
            </div>
          </li>
          <li
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-qyw6ft-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-17vdyq3-MuiTypography-root"
              >
                USDC
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-5eu839-MuiTypography-root"
              >
                1,000 USDC ($1,000)
              </p>
            </div>
          </li>
          <li
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-qyw6ft-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-17vdyq3-MuiTypography-root"
              >
                DAI
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-5eu839-MuiTypography-root"
              >
                500 DAI ($500)
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`./PaperViewToggle.stories LeftAligned 1`] = `
<div
  class="MuiBox-root css-qxh7fn"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-shqplw-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiStack-root css-1sazv7p-MuiStack-root"
    >
      <div
        class="MuiStack-root css-1n46f6x-MuiStack-root"
      >
        <div
          aria-label="text alignment"
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-cinseo-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="0"
          >
            <div
              class="MuiBox-root css-mro3c9"
            >
              Tokens
            </div>
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="1"
          >
            <div
              class="MuiBox-root css-mro3c9"
            >
              NFTs
            </div>
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root css-gajhq5"
      >
        <ul
          class="MuiList-root MuiList-padding MuiList-dense css-b7dj7n-MuiList-root"
        >
          <li
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-qyw6ft-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-17vdyq3-MuiTypography-root"
              >
                ETH
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-5eu839-MuiTypography-root"
              >
                1.5 ETH ($4,500)
              </p>
            </div>
          </li>
          <li
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-qyw6ft-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-17vdyq3-MuiTypography-root"
              >
                USDC
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-5eu839-MuiTypography-root"
              >
                1,000 USDC ($1,000)
              </p>
            </div>
          </li>
          <li
            class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-qyw6ft-MuiListItem-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-17vdyq3-MuiTypography-root"
              >
                DAI
              </span>
              <p
                class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-5eu839-MuiTypography-root"
              >
                500 DAI ($500)
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`./PaperViewToggle.stories SecondViewActive 1`] = `
<div
  class="MuiBox-root css-qxh7fn"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-shqplw-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiStack-root css-1sazv7p-MuiStack-root"
    >
      <div
        class="MuiStack-root css-10cgqx5-MuiStack-root"
      >
        <div
          aria-label="text alignment"
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-cinseo-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="0"
          >
            <div
              class="MuiBox-root css-mro3c9"
            >
              Tokens
            </div>
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="1"
          >
            <div
              class="MuiBox-root css-mro3c9"
            >
              NFTs
            </div>
          </button>
        </div>
      </div>
      <div
        class="MuiBox-root css-gajhq5"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-fw8ds0-MuiTypography-root"
        >
          No NFTs in this Safe
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`./PaperViewToggle.stories ThreeViews 1`] = `
<div
  class="MuiBox-root css-qxh7fn"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-shqplw-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiStack-root css-1sazv7p-MuiStack-root"
    >
      <div
        class="MuiStack-root css-10cgqx5-MuiStack-root"
      >
        <div
          aria-label="text alignment"
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-cinseo-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="0"
          >
            <div
              class="MuiBox-root css-mro3c9"
            >
              All
            </div>
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-middleButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="1"
          >
            <div
              class="MuiBox-root css-mro3c9"
            >
              Tokens
            </div>
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="2"
          >
            <div
              class="MuiBox-root css-mro3c9"
            >
              NFTs
            </div>
          </button>
        </div>
      </div>
      <p
        class="MuiTypography-root MuiTypography-body1 css-wqjtpr-MuiTypography-root"
      >
        All assets shown here
      </p>
    </div>
  </div>
</div>
`;
